# HERON

./: .gitignore  CONTRIBUTING.md  NOTICE.txt  README.md  __init__.py  check_py_coverage.sh  dependencies.ini  dependencies.xml  heron  report_py_coverage.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: under-discussion.md
.github/workflows/: doc-action.yml  github-actions.yml
build_cfg/: HERON  MANIFEST.in  README  setup.cfg
coverage_scripts/: check_py_coverage.sh  initialize_coverage.sh  report_py_coverage.sh
data/: orig_locations.txt
data/ROM/: linear_rom.pk
data/XML_check/: transfers.py
doc/: CaseIn.tex  Cases.tex  Cron.py  EconIn.tex  Enquire.py  HERON_user_manual.tex  Howtorun.tex  INLreport.cls  Main.py  Makefile  OLDmain.py  clean.py  generate_user_manual.py  make_docs.bat  make_docs.sh  version.py
doc/generate/: Enquire.py  generate_user_manual.py  version.py
doc/guide/: heron_guide.md
doc/pdf/: HERON_user_manual.aux  HERON_user_manual.out  HERON_user_manual.tex  HERON_user_manual.toc  (+3 more)
src/: Abce.py  ArmaBypass.py  CapacityPlot.py  Cases.py  CashFlowUser.py  Components.py  DispatchBypass.py  DispatchManager.py  DispatchPlot.py  DispatchScenario.py  Economics.py  Herd.py  Moped.py  NetworkPlot.py  Placeholders.py  SerializationManager.py  ValuedParamHandler.py  ValuedParams.py  __init__.py  _utils.py  base.py  dispatch.py  input_definition.py  input_loader.py  main.py  test.py
templates/: abce.xml  abce_driver.py  cash.xml  inner.xml  outer.xml  template_driver.py  transxml.py  write_inner.py
tests/: .coveragerc  README.md
(+681 files in other folders)
