[metadata]
name = heron-ravenframework
version = 0.5rc1
description = HERON plugin for RAVEN framework
long_description = file: HERON/README.md
license_files = HERON/LICENSE HERON/NOTICE.txt
url = https://github.com/idaholab/HERON

[options.entry_points]
console_scripts =
   heron = HERON.src.main:main

[options.package_data]
HERON/templates =
   *.xml
HERON/src/Hybrid2Heron =
   *.csv

[options]
packages =
    HERON
    HERON/src
    HERON/src/dispatch
    HERON/src/validators
    HERON/src/ValuedParams
    HERON/src/Hybrid2Heron
    HERON/src/TransferFuncs
    HERON/templates
python_requires = >=3.9

install_requires =
   raven_framework >=3.1rc1
   teal_ravenframework
   dill==0.3.5
   pyomo==6.4
   networkx
   pyutilib
